Changes to enable compilation